4 commit - added api-gateway + client2

--- a/eureka-client-2/src/main/resources/application.properties
+++ b/eureka-client-2/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+
 #port will be set automatically randomly
 server.port=0
 
 #id application name must be set in microservice applications
-spring.application.name=eclient
+spring.application.name=eclient2
 
 # where to register microservices
 eureka.client.service-url.defaultZone=http://localhost:8081/eureka
