--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 server.port=8081
 
-#id ??????????, ?????????? ?????? ????????? ? ?????????????? ???????????
+#id application name must be set in microservice applications
 spring.application.name=eserver
 
-#?? ???? ??????????? ?? ?????? ????????
+# as it is not a client, remove settings for web-service registration (default they are true)
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
-# ??? ??????????? ?????????????
+# where to register microservices
 eureka.client.service-url.defaultZone=http://localhost:8081/eureka
 
-# ????????? ?????? ????
+# turn off logging
 logging.level.com.netflix.eureka=OFF
 logging.level.com.netflix.discovery=OFF
 
-#?????? ?????? ?????
+#shorter logs
 logging.pattern.console=%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n
