5 commit - add config for running few instances

--- a/eureka-client/src/main/resources/application.properties
+++ b/eureka-client/src/main/resources/application.properties
@@ -9,3 +9,6 @@ eureka.client.service-url.defaultZone=http://localhost:8081/eureka
 
 #shorter logs
 logging.pattern.console=%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n
+
+# for each instance have unique id
+eureka.instance.instance-id=${spring.application.name}:${random.value}
