6 commit - standart ports for microservice applications with spring cloud

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 #API-GATEWAY
-server.port=8082
+# standard port for api-getaway is 8765
+server.port=8765
 
 #id application name must be set in microservice applications
 spring.application.name=api-gateway
 
 # where to register microservices
-eureka.client.service-url.defaultZone=http://localhost:8081/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 #shorter logs
 logging.pattern.console=%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n
