--- a/eureka-client/src/main/resources/application.properties
+++ b/eureka-client/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 #port will be set automatically randomly
+# standard ports 8080, 8081, 8082...
 server.port=0
 
 #id application name must be set in microservice applications
 spring.application.name=eclient
 
 # where to register microservices
-eureka.client.service-url.defaultZone=http://localhost:8081/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 #shorter logs
 logging.pattern.console=%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n
