--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port=8081
+#standart port for server for microservice applications 8761
+server.port=8761
 
 #id application name must be set in microservice applications
 spring.application.name=eserver
